bugfixes and cleanup

--- a/lib/Local/Makefile
+++ b/lib/Local/Makefile
@@ -1,29 +1,11 @@
 
-.PHONY: all clean install
-
-all: hello libhello libp6zmq
+.PHONY: clean
 
 clean:
 		rm -f *.o *.out *.so hello
 
-install:
-		cp libhello.so ../../resources/libraries
-		cp libp6zmq.so ../../resources/libraries
-
 hello: hello.c
 		gcc -Wall hello.c -o hello
-
-hello.o: hello.c
-		gcc -c -Wall -fpic hello.c
-
-libhello: hello.o
-		gcc -shared -o libhello.so hello.o
-
-buffer-helper.o: buffer-helper.c
-		gcc -c -Wall -fpic buffer-helper.c
-
-libp6zmq: buffer-helper.o
-		gcc -shared -o libp6zmq.so buffer-helper.o
 
 
 
