--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: perl6
-sudo: false
+sudo: true
 perl6:
     - latest
+before_script:
+    - echo "deb http://download.opensuse.org/repositories/network:/messaging:/zeromq:/release-stable/xUbuntu_14.04/ ./" | sudo tee -a /etc/apt/sources.list
+    - wget http://download.opensuse.org/repositories/network:/messaging:/zeromq:/release-stable/xUbuntu_14.04/Release.key -O- | sudo apt-key add
+    - sudo apt-get update -qq
+    - apt-get install libzmq5 -y
 install:
     - rakudobrew build-zef
     - zef install .
