--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: perl6
 sudo: true
 perl6:
     - latest
-before_script:
+before_install:
     - echo "deb http://download.opensuse.org/repositories/network:/messaging:/zeromq:/release-stable/xUbuntu_14.04/ ./" | sudo tee -a /etc/apt/sources.list
     - wget http://download.opensuse.org/repositories/network:/messaging:/zeromq:/release-stable/xUbuntu_14.04/Release.key -O- | sudo apt-key add
     - sudo apt-get update -qq
