--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ before_install:
     - sudo apt-get update -qq
     - apt-get install libzmq5 -y
 install:
+    - prove --exec perl6 -lr
     - rakudobrew build-zef
     - zef install .
